--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0075.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0075.html
@@ -23,7 +23,7 @@
         </span>
         <span id="w_2" class="ocr_word" title="bbox 1965 171 2023 215" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">́Ι</ins>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
@@ -184,7 +184,7 @@
         </span>
         <span id="w_37" class="ocr_word" title="bbox 667 418 751 477" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὶν</ins>
+            <ins title="nlp 2.00">μὲν</ins>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 776 437 860 465" lang="grc">
@@ -313,8 +313,7 @@
         </span>
         <span id="w_61" class="ocr_word" title="bbox 1148 565 1278 609">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Staici</ins>
-            <del title="nlp 0.90">Staici</del>
+            <ins title="nlp 2.00">Stoici</ins>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1321 566 1441 610">
@@ -325,8 +324,7 @@
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1484 566 1637 610">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scUicet</ins>
-            <del title="nlp 0.90">scUicet</del>
+            <ins title="nlp 2.00">scilicet</ins>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 1676 567 1750 611">
@@ -337,26 +335,24 @@
         </span>
         <span id="w_65" class="ocr_word" title="bbox 1791 581 1875 611">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">csse</ins>
-            <del title="nlp 0.90">csse</del>
-          </span>
-        </span>
-        <span id="w_66" class="ocr_word" title="bbox 1915 569 2026 624" lang="grc">
-          <span class="alternatives">
             <ins title="nlp 2.00">esse</ins>
           </span>
         </span>
-        <span id="w_67" class="ocr_word" title="bbox 2043 585 2059 612">
+        <span id="w_66_0" class="ocr_word" title="bbox 1915 569 2026 624">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00">quod</ins>
+          </span>
+        </span>
+        <span id="w_66_1" class="ocr_word" title="bbox 1915 569 2026 624">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 274 636 2026 695">
         <span id="w_68" class="ocr_word" title="bbox 274 636 382 679">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sUva</ins>
-            <del title="nlp 0.90">sUva</del>
+            <ins title="nlp 2.00">silva</ins>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 406 637 463 680">
@@ -367,8 +363,7 @@
         </span>
         <span id="w_70" class="ocr_word" title="bbox 485 636 547 679">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vd</ins>
-            <del title="nlp 0.90">vd</del>
+            <ins title="nlp 2.00">vel</ins>
           </span>
         </span>
         <span id="w_71" class="ocr_word" title="bbox 577 637 703 679">
@@ -379,14 +374,12 @@
         </span>
         <span id="w_72" class="ocr_word" title="bbox 733 636 976 691">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">qualitaiem</ins>
-            <del title="nlp 0.90">qualitaiem</del>
+            <ins title="nlp 2.00">qualitatem</ins>
           </span>
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1010 637 1329 691">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">insepardbilem</ins>
-            <del title="nlp 0.90">insepardbilem</del>
+            <ins title="nlp 2.00">inseparabilem</ins>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1355 638 1476 681">
@@ -417,8 +410,7 @@
       <span class="ocr_line" title="bbox 272 707 1465 764">
         <span id="w_78" class="ocr_word" title="bbox 272 707 423 750">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sHvam</ins>
-            <del title="nlp 0.90">sHvam</del>
+            <ins title="nlp 2.00">silvam</ins>
           </span>
         </span>
         <span id="w_79" class="ocr_word" title="bbox 455 721 601 760">
@@ -429,8 +421,7 @@
         </span>
         <span id="w_80" class="ocr_word" title="bbox 632 708 740 751">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vdut</ins>
-            <del title="nlp 0.90">vdut</del>
+            <ins title="nlp 2.00">velut</ins>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 768 722 905 752">
@@ -591,12 +582,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 271 923 2080 981">
-        <span id="w_107" class="ocr_word" title="bbox 271 924 491 975">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">stantiam,</ins>
-            <del title="nlp 0.90">substantiam,</del>
-          </span>
-        </span>
         <span id="w_108" class="ocr_word" title="bbox 535 923 754 966">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">dividuam</ins>
@@ -629,8 +614,7 @@
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1391 925 1652 968">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mutahUem:</ins>
-            <del title="nlp 0.90">mutahUem:</del>
+            <ins title="nlp 2.00">mutabilem:</ins>
           </span>
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1688 929 1833 980">
@@ -702,8 +686,7 @@
         </span>
         <span id="w_125" class="ocr_word" title="bbox 1212 997 1476 1040">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">existentilms</ins>
-            <del title="nlp 0.90">existentilms</del>
+            <ins title="nlp 2.00">existentibus</ins>
           </span>
         </span>
         <span id="w_126" class="ocr_word" title="bbox 1510 1001 1807 1040">
@@ -727,8 +710,7 @@
       <span class="ocr_line" title="bbox 272 1066 2026 1124">
         <span id="w_129" class="ocr_word" title="bbox 272 1066 371 1109">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lum.</ins>
-            <del title="nlp 0.90">nihilum.</del>
+            <ins title="nlp 2.00">Sed</ins>
           </span>
         </span>
         <span id="w_130" class="ocr_word" title="bbox 433 1066 518 1110">
@@ -805,8 +787,7 @@
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1180 1140 1312 1183">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uUam</ins>
-            <del title="nlp 0.90">uUam</del>
+            <ins title="nlp 2.00">ullam</ins>
           </span>
         </span>
         <span id="w_144" class="ocr_word" title="bbox 1337 1142 1506 1183">
@@ -817,8 +798,7 @@
         </span>
         <span id="w_145" class="ocr_word" title="bbox 1537 1141 1779 1195">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">qualitateni</ins>
-            <del title="nlp 0.90">qualitateni</del>
+            <ins title="nlp 2.00">qualitatem</ins>
           </span>
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1802 1143 2026 1196" lang="grc">
@@ -860,8 +840,7 @@
         </span>
         <span id="w_152" class="ocr_word" title="bbox 1277 1212 1422 1263">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sUvae,</ins>
-            <del title="nlp 0.90">sUvae,</del>
+            <ins title="nlp 2.00">silvae,</ins>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1467 1213 1726 1255">
@@ -940,8 +919,7 @@
         </span>
         <span id="w_165" class="ocr_word" title="bbox 2047 1300 2080 1328">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">u</ins>
-            <del title="nlp 0.90">u</del>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
@@ -1021,8 +999,7 @@
       <span class="ocr_line" title="bbox 273 1425 2026 1481">
         <span id="w_178" class="ocr_word" title="bbox 273 1428 531 1468">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coitsumetur</ins>
-            <del title="nlp 0.90">coitsumetur</del>
+            <ins title="nlp 2.00">consumetur</ins>
           </span>
         </span>
         <span id="w_179" class="ocr_word" title="bbox 555 1427 602 1468">
@@ -1033,8 +1010,7 @@
         </span>
         <span id="w_180" class="ocr_word" title="bbox 632 1425 825 1477">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nihUum,</ins>
-            <del title="nlp 0.90">nihUum,</del>
+            <ins title="nlp 2.00">nihilum,</ins>
           </span>
         </span>
         <span id="w_181" class="ocr_word" title="bbox 856 1440 941 1468">
@@ -1081,8 +1057,7 @@
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1777 1428 2026 1478">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oMemitatc,</ins>
-            <del title="nlp 0.90">oMemitatc,</del>
+            <ins title="nlp 2.00">aeternitate,</ins>
           </span>
         </span>
       </span>
@@ -1164,10 +1139,14 @@
             <del title="nlp 0.90">tam</del>
           </span>
         </span>
-        <span id="w_202" class="ocr_word" title="bbox 754 1569 917 1612">
+        <span id="w_202_0" class="ocr_word" title="bbox 754 1569 917 1612">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">crebrae</ins>
-            <del title="nlp 0.90">crebrae</del>
+            <ins class="alt" title="nlp 2.00">crebrae</ins>
+          </span>
+        </span>
+        <span id="w_202_1" class="ocr_word" title="bbox 754 1569 917 1612">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">tamque</ins>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 1135 1570 1380 1612">
@@ -1377,8 +1356,7 @@
         </span>
         <span id="w_238" class="ocr_word" title="bbox 1851 1788 1887 1827">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">d</ins>
-            <del title="nlp 0.90">d</del>
+            <ins title="nlp 2.00">et</ins>
           </span>
         </span>
         <span id="w_239" class="ocr_word" title="bbox 1906 1785 2023 1827">
@@ -1391,8 +1369,7 @@
       <span class="ocr_line" title="bbox 274 1857 499 1912">
         <span id="w_240" class="ocr_word" title="bbox 274 1857 499 1912">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">adpdlard.</ins>
-            <del title="nlp 0.90">adpdlard.</del>
+            <ins title="nlp 2.00">adpellant.</ins>
           </span>
         </span>
       </span>
@@ -2035,8 +2012,7 @@
         </span>
         <span id="w_361" class="ocr_word" title="bbox 1922 2644 2027 2695">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(scU.</ins>
-            <del title="nlp 0.90">(scU.</del>
+            <ins title="nlp 2.00">(scil.</ins>
           </span>
         </span>
       </span>
@@ -2156,9 +2132,14 @@
             <del title="nlp 0.90">corporis</del>
           </span>
         </span>
-        <span id="w_384" class="ocr_word" title="bbox 1871 2812 1925 2816">
+        <span id="w_384_0" class="ocr_word" title="bbox 1871 2812 1925 2816">
           <span class="alternatives">
-            <ins title="nlp 2.00">—  —</ins>
+            <ins class="alt" title="nlp 2.00">—</ins>
+          </span>
+        </span>
+        <span id="w_384_1" class="ocr_word" title="bbox 1871 2812 1925 2816">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_385" class="ocr_word" title="bbox 1958 2801 2030 2829">
@@ -2211,8 +2192,7 @@
         </span>
         <span id="w_393" class="ocr_word" title="bbox 1373 2860 1616 2914">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">efficerdur,</ins>
-            <del title="nlp 0.90">efficerdur,</del>
+            <ins title="nlp 2.00">efficeretur,</ins>
           </span>
         </span>
         <span id="w_394" class="ocr_word" title="bbox 1658 2872 1779 2913">
@@ -2315,8 +2295,7 @@
         </span>
         <span id="w_411" class="ocr_word" title="bbox 1889 3047 2025 3084">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">libnim</ins>
-            <del title="nlp 0.90">libnim</del>
+            <ins title="nlp 2.00">librum</ins>
           </span>
         </span>
       </span>
@@ -2419,7 +2398,7 @@
         </span>
         <span id="w_429" class="ocr_word" title="bbox 758 3161 849 3197" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πᾶν</ins>
+            <ins title="nlp 2.00">(πᾶν</ins>
           </span>
         </span>
         <span id="w_430" class="ocr_word" title="bbox 875 3169 946 3203" lang="grc">
