--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0076.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0076.html
@@ -42,8 +42,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 524 305 675 349">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Αëtius</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 706 306 726 348">
@@ -96,8 +95,7 @@
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1762 325 1815 351">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xa</ins>
-            <del title="nlp 0.90">xa</del>
+            <ins title="nlp 2.00">τὰ</ins>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 1846 325 2050 366" lang="grc">
@@ -240,8 +238,7 @@
       <span class="ocr_line" title="bbox 277 590 2050 651">
         <span id="w_41" class="ocr_word" title="bbox 277 607 292 634">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">B</ins>
-            <del title="nlp 0.90">B</del>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
         <span id="w_42" class="ocr_word" title="bbox 430 590 491 633">
@@ -952,7 +949,7 @@
         </span>
         <span id="w_173" class="ocr_word" title="bbox 1650 1374 1719 1424" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
         <span id="w_174" class="ocr_word" title="bbox 1739 1373 1888 1432" lang="grc">
@@ -1100,8 +1097,7 @@
         </span>
         <span id="w_203" class="ocr_word" title="bbox 524 1659 675 1704">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Αëtius</ins>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 706 1660 728 1704">
@@ -1425,7 +1421,7 @@
       <span class="ocr_line" title="bbox 258 2009 2054 2074">
         <span id="w_263" class="ocr_word" title="bbox 258 2035 292 2061">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">35</ins>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
         <span id="w_264" class="ocr_word" title="bbox 312 2019 543 2074" lang="grc">
@@ -1543,8 +1539,7 @@
         </span>
         <span id="w_285" class="ocr_word" title="bbox 682 2160 820 2203">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_286" class="ocr_word" title="bbox 847 2159 932 2202">
@@ -2248,12 +2243,12 @@
         </span>
         <span id="w_419" class="ocr_word" title="bbox 1441 3007 1465 3042">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1.</ins>
+            <ins title="nlp 2.00">l.</ins>
           </span>
         </span>
         <span id="w_420" class="ocr_word" title="bbox 1485 3006 1509 3041">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1.</ins>
+            <ins title="nlp 2.00">l.</ins>
           </span>
         </span>
         <span id="w_421" class="ocr_word" title="bbox 1669 3009 1712 3040">
@@ -2376,7 +2371,7 @@
         </span>
         <span id="w_442" class="ocr_word" title="bbox 871 3116 905 3152">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_443" class="ocr_word" title="bbox 929 3129 963 3151">
@@ -2385,30 +2380,29 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_444_0" class="ocr_word" title="bbox 986 3118 1185 3153">
+        <span id="w_444_0_0" class="ocr_word" title="bbox 986 3118 1185 3153">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">503—505.</ins>
           </span>
         </span>
-        <span id="w_444_1" class="ocr_word" title="bbox 986 3118 1185 3153">
+        <span id="w_444_0_1" class="ocr_word" title="bbox 986 3118 1185 3153">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">535—543,</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_444_1_0" class="ocr_word" title="bbox 986 3118 1185 3153">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">535—543.</ins>
+          </span>
+        </span>
+        <span id="w_444_1_1" class="ocr_word" title="bbox 986 3118 1185 3153">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_446" class="ocr_word" title="bbox 1533 3117 1577 3149">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">29</ins>
-          </span>
-        </span>
-        <span id="w_447" class="ocr_word" title="bbox 1602 3111 1850 3159" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατεχομένου</ins>
-          </span>
-        </span>
-        <span id="w_448" class="ocr_word" title="bbox 1876 3112 1948 3147">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">LD.</ins>
-            <del title="nlp 0.90">LD.</del>
           </span>
         </span>
       </span>
@@ -2426,8 +2420,7 @@
         </span>
         <span id="w_451" class="ocr_word" title="bbox 465 3171 498 3206">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">n</ins>
-            <del title="nlp 0.90">n</del>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_452" class="ocr_word" title="bbox 523 3183 558 3206">
@@ -2436,9 +2429,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_453" class="ocr_word" title="bbox 580 3174 777 3206">
+        <span id="w_453_0" class="ocr_word" title="bbox 580 3174 777 3206">
           <span class="alternatives">
-            <ins title="nlp 2.00">522—524,</ins>
+            <ins class="alt" title="nlp 2.00">522—524.</ins>
           </span>
         </span>
       </span>
