--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0077.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0077.html
@@ -49,8 +49,7 @@
         </span>
         <span id="w_6" class="ocr_word" title="bbox 362 480 554 525">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">niiindo.</ins>
-            <del title="nlp 0.90">niiindo.</del>
+            <ins title="nlp 2.00">mundo.</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 588 506 643 512">
@@ -60,8 +59,7 @@
         </span>
         <span id="w_8" class="ocr_word" title="bbox 677 481 833 525">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">llnnm</ins>
-            <del title="nlp 0.90">llnnm</del>
+            <ins title="nlp 2.00">Unum</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 866 492 984 527">
@@ -77,8 +75,7 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1107 481 1334 527">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Oenitum</ins>
-            <del title="nlp 0.90">Oenitum</del>
+            <ins title="nlp 2.00">Genitum</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1368 483 1418 527" lang="grc">
@@ -133,8 +130,7 @@
         </span>
         <span id="w_21" class="ocr_word" title="bbox 1113 554 1380 601">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">elenientiH.</ins>
-            <del title="nlp 0.90">elenientiH.</del>
+            <ins title="nlp 2.00">elementis.</ins>
           </span>
         </span>
         <span id="w_22" class="ocr_word" title="bbox 1414 581 1470 588">
@@ -197,8 +193,7 @@
         </span>
         <span id="w_32" class="ocr_word" title="bbox 709 720 846 764">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 867 720 951 764">
@@ -234,7 +229,7 @@
         </span>
         <span id="w_39" class="ocr_word" title="bbox 1538 723 1581 781" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">(ὁ</ins>
           </span>
         </span>
         <span id="w_40" class="ocr_word" title="bbox 1611 723 1792 782" lang="grc">
@@ -291,13 +286,17 @@
         </span>
         <span id="w_49" class="ocr_word" title="bbox 1227 792 1378 837">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Αëtius</ins>
           </span>
         </span>
-        <span id="w_50" class="ocr_word" title="bbox 1408 793 1550 851">
+        <span id="w_50_0" class="ocr_word" title="bbox 1408 793 1550 851">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">111,2</ins>
+            <ins class="alt" title="nlp 2.00">II</ins>
+          </span>
+        </span>
+        <span id="w_50_1" class="ocr_word" title="bbox 1408 793 1550 851">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">1,2</ins>
           </span>
         </span>
         <span id="w_51" class="ocr_word" title="bbox 1583 794 1721 853">
@@ -306,15 +305,19 @@
             <del title="nlp 0.90">(DDG</del>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1754 812 1792 853">
+        <span id="w_52_0" class="ocr_word" title="bbox 1754 812 1792 853">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins class="alt" title="nlp 2.00">p.</ins>
           </span>
         </span>
-        <span id="w_53" class="ocr_word" title="bbox 1820 796 2010 854">
+        <span id="w_52_1" class="ocr_word" title="bbox 1754 812 1792 853">
           <span class="alternatives">
-            <ins title="nlp 2.00">327 b 8)</ins>
+            <ins class="alt" title="nlp 2.00">327b</ins>
+          </span>
+        </span>
+        <span id="w_53_0" class="ocr_word" title="bbox 1820 796 2010 854">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">8)</ins>
           </span>
         </span>
       </span>
@@ -388,8 +391,7 @@
         </span>
         <span id="w_66" class="ocr_word" title="bbox 467 934 510 978">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">U</ins>
-            <del title="nlp 0.90">U</del>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 541 950 581 979">
@@ -495,9 +497,14 @@
             <del title="nlp 0.90">d.</del>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 799 1091 933 1149" lang="grc">
+        <span id="w_84_0" class="ocr_word" title="bbox 799 1091 933 1149">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Περὶ</ins>
+            <ins class="alt" title="nlp 2.00">(Περὶ</ins>
+          </span>
+        </span>
+        <span id="w_84_1" class="ocr_word" title="bbox 799 1091 933 1149">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 965 1099 1042 1148" lang="grc">
@@ -533,11 +540,6 @@
         <span id="w_91_0" class="ocr_word" title="bbox 1986 1094 2009 1139">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_91_1" class="ocr_word" title="bbox 1986 1094 2009 1139">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
@@ -687,14 +689,9 @@
             <ins class="alt" title="nlp 1.00">φησιν</ins>
           </span>
         </span>
-        <span id="w_122" class="ocr_word" title="bbox 1465 1306 1578 1352" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶναι</ins>
-          </span>
-        </span>
         <span id="w_123" class="ocr_word" title="bbox 1589 1342 1601 1365">
           <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00">εἶναι,</ins>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 1644 1310 1718 1353" lang="grc">
