--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0078.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0078.html
@@ -614,8 +614,7 @@
         </span>
         <span id="w_114" class="ocr_word" title="bbox 576 1004 727 1048">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Αëtius</ins>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 759 1004 779 1047">
@@ -641,9 +640,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_119" class="ocr_word" title="bbox 1164 1005 1285 1048">
+        <span id="w_119_0" class="ocr_word" title="bbox 1164 1005 1285 1048">
           <span class="alternatives">
-            <ins title="nlp 2.00">313 3 1).</ins>
+            <ins class="alt" title="nlp 2.00">313b</ins>
+          </span>
+        </span>
+        <span id="w_119_1" class="ocr_word" title="bbox 1164 1005 1285 1048">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_120" class="ocr_word" title="bbox 1303 1003 1359 1062">
@@ -669,11 +673,6 @@
         <span id="w_124" class="ocr_word" title="bbox 1854 1018 1943 1059" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πῦρ</ins>
-          </span>
-        </span>
-        <span id="w_125" class="ocr_word" title="bbox 1969 1003 2069 1045" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατ’</ins>
           </span>
         </span>
       </span>
@@ -1059,7 +1058,7 @@
         </span>
         <span id="w_197" class="ocr_word" title="bbox 688 1504 799 1561" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ]</ins>
+            <ins title="nlp 2.00">[καὶ]</ins>
           </span>
         </span>
         <span id="w_198" class="ocr_word" title="bbox 832 1505 878 1548" lang="grc">
@@ -1188,7 +1187,7 @@
         </span>
         <span id="w_222" class="ocr_word" title="bbox 520 1647 677 1704" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μῖξιν]</ins>
+            <ins title="nlp 2.00">[μῖξιν]</ins>
           </span>
         </span>
         <span id="w_223" class="ocr_word" title="bbox 703 1655 862 1704" lang="grc">
@@ -1278,8 +1277,7 @@
         </span>
         <span id="w_240" class="ocr_word" title="bbox 600 1791 738 1834">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_241" class="ocr_word" title="bbox 759 1790 842 1833">
@@ -1333,9 +1331,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_251" class="ocr_word" title="bbox 1925 1789 2072 1844" lang="grc">
+        <span id="w_251_0" class="ocr_word" title="bbox 1925 1789 2072 1844">
           <span class="alternatives">
-            <ins title="nlp 2.00">μἱμαρμένην</ins>
+            <ins class="alt" title="nlp 2.00">εἱμαρμένην</ins>
           </span>
         </span>
       </span>
@@ -1709,9 +1707,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_328" class="ocr_word" title="bbox 1498 2290 1635 2333" lang="grc">
+        <span id="w_328_0" class="ocr_word" title="bbox 1498 2290 1635 2333">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὅλου. —</ins>
+            <ins class="alt" title="nlp 2.00">ὅλου.</ins>
+          </span>
+        </span>
+        <span id="w_328_1" class="ocr_word" title="bbox 1498 2290 1635 2333">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_329" class="ocr_word" title="bbox 1738 2289 1851 2332">
@@ -2049,8 +2052,7 @@
         </span>
         <span id="w_391" class="ocr_word" title="bbox 1940 2727 2074 2770">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aSrem,</ins>
-            <del title="nlp 0.90">aSrem,</del>
+            <ins title="nlp 2.00">aërem,</ins>
           </span>
         </span>
       </span>
@@ -2220,9 +2222,14 @@
             <ins class="alt" title="nlp 1.00">μῖξιν</ins>
           </span>
         </span>
-        <span id="w_421" class="ocr_word" title="bbox 1059 2889 1179 2938">
+        <span id="w_421_0" class="ocr_word" title="bbox 1059 2889 1179 2938">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; καὶ &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_421_1" class="ocr_word" title="bbox 1059 2889 1179 2938">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_422" class="ocr_word" title="bbox 1205 2895 1338 2933" lang="grc">
@@ -2244,12 +2251,6 @@
         <span id="w_425" class="ocr_word" title="bbox 1575 2886 1748 2934" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">γίνεσθαι—μεταβολῆ</ins>
-          </span>
-        </span>
-        <span id="w_426" class="ocr_word" title="bbox 2013 2885 2074 2920">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vix</ins>
-            <del title="nlp 0.90">vix</del>
           </span>
         </span>
       </span>
@@ -2520,24 +2521,19 @@
             <del title="nlp 0.90">litterarum</del>
           </span>
         </span>
-        <span id="w_476_0" class="ocr_word" title="bbox 1759 3100 1816 3135">
+        <span id="w_476_1_0" class="ocr_word" title="bbox 1759 3100 1816 3135">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">P</ins>
+            <ins class="alt" title="nlp 2.00">P3.</ins>
           </span>
         </span>
-        <span id="w_476_1" class="ocr_word" title="bbox 1759 3100 1816 3135">
+        <span id="w_476_1_1" class="ocr_word" title="bbox 1759 3100 1816 3135">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">3</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_477" class="ocr_word" title="bbox 1938 3102 1981 3134">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">33</ins>
-          </span>
-        </span>
-        <span id="w_478" class="ocr_word" title="bbox 2008 3098 2071 3134" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
