--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0079.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0079.html
@@ -85,7 +85,7 @@
         </span>
         <span id="w_14" class="ocr_word" title="bbox 1887 279 1970 336" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὶν</ins>
+            <ins title="nlp 2.00">μὲν</ins>
           </span>
         </span>
       </span>
@@ -166,14 +166,12 @@
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1320 422 1517 477">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(quaiuor</ins>
-            <del title="nlp 0.90">(quaiuor</del>
+            <ins title="nlp 2.00">(quatuor</ins>
           </span>
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1558 422 1783 476">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">demenlia)</ins>
-            <del title="nlp 0.90">demenlia</del>
+            <ins title="nlp 2.00">elementis)</ins>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 1826 423 1970 464">
@@ -235,9 +233,9 @@
             <del title="nlp 0.90">Chrysippus</del>
           </span>
         </span>
-        <span id="w_39" class="ocr_word" title="bbox 1798 493 1970 536">
+        <span id="w_39_0" class="ocr_word" title="bbox 1798 493 1970 536">
           <span class="alternatives">
-            <ins title="nlp 2.00">Sp;aeis</ins>
+            <ins class="alt" title="nlp 2.00">Solaeus</ins>
           </span>
         </span>
       </span>
@@ -250,8 +248,7 @@
         </span>
         <span id="w_41" class="ocr_word" title="bbox 293 564 508 608">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">CleantJies</ins>
-            <del title="nlp 0.90">CleantJies</del>
+            <ins title="nlp 2.00">Cleanthes</ins>
           </span>
         </span>
         <span id="w_42" class="ocr_word" title="bbox 537 565 702 608">
@@ -308,8 +305,7 @@
         </span>
         <span id="w_51" class="ocr_word" title="bbox 1989 582 2005 607">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">s</ins>
-            <del title="nlp 0.90">s</del>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -426,8 +422,7 @@
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1366 707 1518 751">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Thaies</ins>
-            <del title="nlp 0.90">Thaies</del>
+            <ins title="nlp 2.00">Thales</ins>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1549 707 1746 750">
@@ -469,8 +464,7 @@
         </span>
         <span id="w_80" class="ocr_word" title="bbox 1051 778 1179 821">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Uanc</ins>
-            <del title="nlp 0.90">Uanc</del>
+            <ins title="nlp 2.00">Hanc</ins>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 1214 779 1380 833">
@@ -505,8 +499,7 @@
         </span>
         <span id="w_86" class="ocr_word" title="bbox 444 855 602 905">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">putatU</ins>
-            <del title="nlp 0.90">putatU</del>
+            <ins title="nlp 2.00">putant</ins>
           </span>
         </span>
         <span id="w_87" class="ocr_word" title="bbox 638 864 813 893">
@@ -587,15 +580,9 @@
             <del title="nlp 0.90">sic</del>
           </span>
         </span>
-        <span id="w_101" class="ocr_word" title="bbox 1220 922 1515 975">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">interpretaiur</ins>
-            <del title="nlp 0.90">interpretaiur</del>
-          </span>
-        </span>
         <span id="w_102" class="ocr_word" title="bbox 1522 954 1532 973">
           <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00">interpretaiur,</ins>
           </span>
         </span>
         <span id="w_103" class="ocr_word" title="bbox 1569 935 1723 975">
@@ -611,7 +598,7 @@
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1898 934 1973 974">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">op-</ins>
+            <ins title="nlp 2.00">appellatum</ins>
           </span>
         </span>
         <span id="w_106" class="ocr_word" title="bbox 1993 937 2027 964">
@@ -621,12 +608,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 220 990 1973 1049">
-        <span id="w_107" class="ocr_word" title="bbox 220 993 423 1049">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">peUatum</ins>
-            <del title="nlp 0.90">peUatum</del>
-          </span>
-        </span>
         <span id="w_108" class="ocr_word" title="bbox 456 992 541 1036" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
@@ -680,8 +661,7 @@
         </span>
         <span id="w_117" class="ocr_word" title="bbox 484 1064 723 1119">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ifUdlegere,</ins>
-            <del title="nlp 0.90">ifUdlegere,</del>
+            <ins title="nlp 2.00">intellegere,</ins>
           </span>
         </span>
         <span id="w_118" class="ocr_word" title="bbox 767 1065 877 1118">
@@ -810,9 +790,14 @@
             <del title="nlp 0.90">e.</del>
           </span>
         </span>
-        <span id="w_140" class="ocr_word" title="bbox 453 1206 623 1250">
+        <span id="w_140_0" class="ocr_word" title="bbox 453 1206 623 1250">
           <span class="alternatives">
-            <ins title="nlp 2.00">Petav.“</ins>
+            <ins class="alt" title="nlp 2.00">Petav.“</ins>
+          </span>
+        </span>
+        <span id="w_140_1" class="ocr_word" title="bbox 453 1206 623 1250">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_141" class="ocr_word" title="bbox 643 1206 862 1250">
@@ -866,11 +851,6 @@
         <span id="w_150" class="ocr_word" title="bbox 1797 1206 1846 1247" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_151" class="ocr_word" title="bbox 1887 1220 1973 1260" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πρὸ</ins>
           </span>
         </span>
       </span>
@@ -935,8 +915,7 @@
         </span>
         <span id="w_163" class="ocr_word" title="bbox 324 1349 365 1392">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">n</ins>
-            <del title="nlp 0.90">n</del>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_164" class="ocr_word" title="bbox 398 1366 436 1393">
@@ -1053,9 +1032,14 @@
             <ins class="alt" title="nlp 1.00">συνιζάνοντος</ins>
           </span>
         </span>
-        <span id="w_186" class="ocr_word" title="bbox 1315 1496 1417 1535" lang="grc">
+        <span id="w_186_0" class="ocr_word" title="bbox 1315 1496 1417 1535">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἰλὺν</ins>
+            <ins class="alt" title="nlp 2.00">ἰλὺν</ins>
+          </span>
+        </span>
+        <span id="w_186_1" class="ocr_word" title="bbox 1315 1496 1417 1535">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_187" class="ocr_word" title="bbox 1460 1495 1681 1545" lang="grc">
@@ -1066,11 +1050,6 @@
         <span id="w_188" class="ocr_word" title="bbox 1724 1488 1776 1545">
           <span class="alternatives">
             <ins title="nlp 2.00">ἧς</ins>
-          </span>
-        </span>
-        <span id="w_189" class="ocr_word" title="bbox 1806 1505 1975 1546" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πηγνυμένης</ins>
           </span>
         </span>
       </span>
@@ -1171,7 +1150,7 @@
       <span class="ocr_line" title="bbox 355 1704 1977 1765">
         <span id="w_207" class="ocr_word" title="bbox 355 1706 445 1751">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">106</ins>
+            <ins title="nlp 2.00">105</ins>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 480 1706 622 1751">
@@ -1325,8 +1304,7 @@
         </span>
         <span id="w_236" class="ocr_word" title="bbox 1605 1848 1743 1890">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_237" class="ocr_word" title="bbox 1769 1846 1853 1889">
@@ -1443,8 +1421,7 @@
         </span>
         <span id="w_258" class="ocr_word" title="bbox 1997 2009 2032 2035">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ss</ins>
-            <del title="nlp 0.90">ss</del>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
@@ -1498,8 +1475,7 @@
         </span>
         <span id="w_268" class="ocr_word" title="bbox 1681 2064 1752 2105">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xal</ins>
-            <del title="nlp 0.90">xal</del>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_269" class="ocr_word" title="bbox 1797 2066 1980 2118" lang="grc">
@@ -1662,7 +1638,7 @@
         </span>
         <span id="w_299" class="ocr_word" title="bbox 753 2368 820 2407" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰ</ins>
+            <ins title="nlp 2.00">„εἰ</ins>
           </span>
         </span>
         <span id="w_300" class="ocr_word" title="bbox 852 2354 910 2408" lang="grc">
@@ -1732,14 +1708,9 @@
             <ins class="alt" title="nlp 1.00">αὐτῆς</ins>
           </span>
         </span>
-        <span id="w_314" class="ocr_word" title="bbox 985 2432 1150 2480" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἑωρᾶτο</ins>
-          </span>
-        </span>
         <span id="w_315" class="ocr_word" title="bbox 1160 2455 1172 2477">
           <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00">ἑωρᾶτο,</ins>
           </span>
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1216 2423 1424 2478" lang="grc">
@@ -1750,12 +1721,6 @@
         <span id="w_317" class="ocr_word" title="bbox 1457 2422 1483 2463" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">δ’</ins>
-          </span>
-        </span>
-        <span id="w_318" class="ocr_word" title="bbox 1495 2420 1505 2436">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
           </span>
         </span>
         <span id="w_319" class="ocr_word" title="bbox 1523 2422 1608 2476" lang="grc">
@@ -1861,7 +1826,7 @@
         </span>
         <span id="w_340" class="ocr_word" title="bbox 1107 2566 1256 2609" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀιδίου</ins>
+            <ins title="nlp 2.00">ἀϊδίου</ins>
           </span>
         </span>
         <span id="w_341" class="ocr_word" title="bbox 1290 2563 1548 2621" lang="grc">
@@ -2150,8 +2115,7 @@
         </span>
         <span id="w_398" class="ocr_word" title="bbox 1258 2986 1409 3023">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">HeBiod.</ins>
-            <del title="nlp 0.90">HeBiod.</del>
+            <ins title="nlp 2.00">Ηesiod.</ins>
           </span>
         </span>
         <span id="w_399" class="ocr_word" title="bbox 1436 2985 1575 3032">
@@ -2178,8 +2142,7 @@
         </span>
         <span id="w_403" class="ocr_word" title="bbox 1953 2985 1987 3020">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">S</ins>
-            <del title="nlp 0.90">S</del>
+            <ins title="nlp 2.00">Ξ</ins>
           </span>
         </span>
       </span>
@@ -2191,7 +2154,7 @@
         </span>
         <span id="w_405" class="ocr_word" title="bbox 349 3047 429 3079">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">802.</ins>
+            <ins title="nlp 2.00">302.</ins>
           </span>
         </span>
         <span id="w_406" class="ocr_word" title="bbox 571 3046 611 3078">
@@ -2329,8 +2292,7 @@
         </span>
         <span id="w_429" class="ocr_word" title="bbox 361 3151 510 3188">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Uaener.</ins>
-            <del title="nlp 0.90">Uaener.</del>
+            <ins title="nlp 2.00">Usener.</ins>
           </span>
         </span>
       </span>
