--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0080.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0080.html
@@ -86,9 +86,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 356 368 2089 428">
-        <span id="w_14" class="ocr_word" title="bbox 356 375 469 428">
+        <span id="w_14_0" class="ocr_word" title="bbox 356 375 469 428">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; ἂν &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἂν&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_14_1" class="ocr_word" title="bbox 356 375 469 428">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 502 374 724 428" lang="grc">
@@ -129,11 +134,6 @@
         <span id="w_22" class="ocr_word" title="bbox 1794 368 1866 411" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_23" class="ocr_word" title="bbox 1903 368 2089 423" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μάλιστα</ins>
           </span>
         </span>
       </span>
@@ -309,14 +309,9 @@
             <ins title="nlp 2.00">„ἤδη</ins>
           </span>
         </span>
-        <span id="w_59" class="ocr_word" title="bbox 957 657 1185 710" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μεμείωται</ins>
-          </span>
-        </span>
         <span id="w_60" class="ocr_word" title="bbox 1200 667 1208 676">
           <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins title="nlp 2.00">μεμείωται·</ins>
           </span>
         </span>
         <span id="w_61" class="ocr_word" title="bbox 1240 654 1457 709" lang="grc">
@@ -538,9 +533,9 @@
             <ins class="alt" title="nlp 1.00">Ἀνάφην</ins>
           </span>
         </span>
-        <span id="w_106" class="ocr_word" title="bbox 1984 938 2093 978" lang="grc">
+        <span id="w_106_0" class="ocr_word" title="bbox 1984 938 2093 978">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀνόμασαν</ins>
+            <ins class="alt" title="nlp 2.00">ὠνόμασαν</ins>
           </span>
         </span>
       </span>
@@ -682,16 +677,11 @@
         </span>
         <span id="w_135" class="ocr_word" title="bbox 1989 1149 2093 1192" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνα-</ins>
+            <ins title="nlp 2.00">ἀναξηρανθέντας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 363 1220 2098 1282">
-        <span id="w_136" class="ocr_word" title="bbox 363 1224 662 1282" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ξηρανθέντας</ins>
-          </span>
-        </span>
         <span id="w_137" class="ocr_word" title="bbox 710 1229 983 1280" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἠπειρῶσθαι</ins>
@@ -916,7 +906,7 @@
       <span class="ocr_line" title="bbox 309 1651 1388 1708">
         <span id="w_180" class="ocr_word" title="bbox 309 1670 345 1697">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">90</ins>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
         <span id="w_181" class="ocr_word" title="bbox 481 1655 684 1695" lang="grc">
@@ -1187,14 +1177,9 @@
             <ins class="alt" title="nlp 1.00">στοιχεῖον</ins>
           </span>
         </span>
-        <span id="w_233" class="ocr_word" title="bbox 1455 2077 1786 2132" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀναλωθήσεται</ins>
-          </span>
-        </span>
         <span id="w_234" class="ocr_word" title="bbox 1798 2109 1809 2131">
           <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00">ἀναλωθήσεται,</ins>
           </span>
         </span>
         <span id="w_235" class="ocr_word" title="bbox 1848 2076 2105 2130" lang="grc">
@@ -1522,9 +1507,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 373 2576 2108 2634">
-        <span id="w_301" class="ocr_word" title="bbox 373 2579 437 2623" lang="grc">
+        <span id="w_301_0" class="ocr_word" title="bbox 373 2579 437 2623">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἕν ’</ins>
+            <ins class="alt" title="nlp 2.00">ἵν᾿</ins>
+          </span>
+        </span>
+        <span id="w_301_1" class="ocr_word" title="bbox 373 2579 437 2623">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_302" class="ocr_word" title="bbox 456 2579 540 2622" lang="grc">
@@ -1565,11 +1555,6 @@
         <span id="w_309" class="ocr_word" title="bbox 1648 2577 1792 2632" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">χρόνῳ</ins>
-          </span>
-        </span>
-        <span id="w_310" class="ocr_word" title="bbox 1837 2576 2108 2626" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαλύσεται;</ins>
           </span>
         </span>
       </span>
@@ -1643,7 +1628,7 @@
         </span>
         <span id="w_324" class="ocr_word" title="bbox 643 2720 689 2778" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">(ἡ</ins>
           </span>
         </span>
         <span id="w_325" class="ocr_word" title="bbox 721 2720 770 2763">
@@ -1832,9 +1817,9 @@
             <ins title="nlp 2.00">ὑφ’</ins>
           </span>
         </span>
-        <span id="w_364" class="ocr_word" title="bbox 2005 2942 2109 2984" lang="grc">
+        <span id="w_364_0" class="ocr_word" title="bbox 2005 2942 2109 2984">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἡσυἂν</ins>
+            <ins class="alt" title="nlp 2.00">ἡσυ-</ins>
           </span>
         </span>
       </span>
@@ -1844,10 +1829,14 @@
             <ins title="nlp 2.00">2</ins>
           </span>
         </span>
-        <span id="w_367" class="ocr_word" title="bbox 617 3104 765 3140">
+        <span id="w_367_0" class="ocr_word" title="bbox 617 3104 765 3140">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">addidit</ins>
-            <del title="nlp 0.90">addidit</del>
+            <ins class="alt" title="nlp 2.00">ἂν</ins>
+          </span>
+        </span>
+        <span id="w_367_1" class="ocr_word" title="bbox 617 3104 765 3140">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">addidit</ins>
           </span>
         </span>
         <span id="w_368" class="ocr_word" title="bbox 790 3103 1002 3139">
