--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0081.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0081.html
@@ -23,7 +23,7 @@
         </span>
         <span id="w_2" class="ocr_word" title="bbox 1927 168 1979 212">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">81</ins>
+            <ins title="nlp 2.00">31</ins>
           </span>
         </span>
       </span>
@@ -282,9 +282,14 @@
             <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
           </span>
         </span>
-        <span id="w_54" class="ocr_word" title="bbox 1828 568 1984 620" lang="grc">
+        <span id="w_54_0" class="ocr_word" title="bbox 1828 568 1984 620">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φθορᾷ</ins>
+            <ins class="alt" title="nlp 2.00">φθορᾷ</ins>
+          </span>
+        </span>
+        <span id="w_54_1" class="ocr_word" title="bbox 1828 568 1984 620">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -951,14 +956,14 @@
             <ins class="alt" title="nlp 1.00">τοιῷδε·</ins>
           </span>
         </span>
-        <span id="w_189" class="ocr_word" title="bbox 1690 1564 1846 1621" lang="grc">
+        <span id="w_189_0" class="ocr_word" title="bbox 1690 1564 1846 1621">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοιῷδε·</ins>
+            <ins class="alt" title="nlp 2.00">μηκέτ᾿</ins>
           </span>
         </span>
-        <span id="w_190" class="ocr_word" title="bbox 1865 1581 1986 1621" lang="grc">
+        <span id="w_189_1" class="ocr_word" title="bbox 1690 1564 1846 1621">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἔχοντες</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1102,14 +1107,14 @@
             <ins class="alt" title="nlp 1.00">στέριφον</ins>
           </span>
         </span>
-        <span id="w_219" class="ocr_word" title="bbox 1773 1780 1884 1835">
+        <span id="w_219_0" class="ocr_word" title="bbox 1773 1780 1884 1835">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; ὂν &amp;#x003C;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὂν&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_220" class="ocr_word" title="bbox 1914 1778 1987 1822" lang="grc">
+        <span id="w_219_1" class="ocr_word" title="bbox 1773 1780 1884 1835">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1950,8 +1955,7 @@
         </span>
         <span id="w_389" class="ocr_word" title="bbox 1259 3046 1412 3092">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">UBener,</ins>
-            <del title="nlp 0.90">UBener,</del>
+            <ins title="nlp 2.00">Usener,</ins>
           </span>
         </span>
         <span id="w_390" class="ocr_word" title="bbox 1437 3045 1556 3092" lang="grc">
@@ -2081,8 +2085,7 @@
         </span>
         <span id="w_411" class="ocr_word" title="bbox 845 3158 974 3201">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lOesq.</ins>
-            <del title="nlp 0.90">lOesq.</del>
+            <ins title="nlp 2.00">106 sq.</ins>
           </span>
         </span>
         <span id="w_412" class="ocr_word" title="bbox 1001 3157 1040 3190">
@@ -2136,8 +2139,7 @@
       <span class="ocr_line" title="bbox 304 3226 1694 3269">
         <span id="w_420" class="ocr_word" title="bbox 304 3237 475 3264">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stoioorum</ins>
-            <del title="nlp 0.90">Stoioorum</del>
+            <ins title="nlp 2.00">Stoicorum</ins>
           </span>
         </span>
         <span id="w_421" class="ocr_word" title="bbox 495 3240 630 3263">
