--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0082.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0082.html
@@ -931,8 +931,7 @@
         </span>
         <span id="w_167" class="ocr_word" title="bbox 685 1421 833 1475">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quihus</ins>
-            <del title="nlp 0.90">quihus</del>
+            <ins title="nlp 2.00">quibus</ins>
           </span>
         </span>
         <span id="w_168" class="ocr_word" title="bbox 859 1423 1111 1475">
@@ -1005,8 +1004,7 @@
         </span>
         <span id="w_179" class="ocr_word" title="bbox 1029 1491 1289 1534">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">manmtihus</ins>
-            <del title="nlp 0.90">manmtihus</del>
+            <ins title="nlp 2.00">manentibus</ins>
           </span>
         </span>
         <span id="w_180" class="ocr_word" title="bbox 1320 1490 1524 1533">
@@ -1509,14 +1507,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_273" class="ocr_word" title="bbox 1018 2133 1103 2176">
+        <span id="w_273_0" class="ocr_word" title="bbox 1018 2133 1103 2176">
           <span class="alternatives">
-            <ins title="nlp 2.00">623—631.</ins>
-          </span>
-        </span>
-        <span id="w_275" class="ocr_word" title="bbox 1167 2133 1265 2175">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">631.</ins>
+            <ins class="alt" title="nlp 2.00">623—631.</ins>
           </span>
         </span>
       </span>
@@ -1795,7 +1788,7 @@
         </span>
         <span id="w_328" class="ocr_word" title="bbox 1969 2484 2076 2541" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰ]</ins>
+            <ins title="nlp 2.00">„[εἰ]</ins>
           </span>
         </span>
       </span>
@@ -1936,7 +1929,7 @@
         </span>
         <span id="w_356" class="ocr_word" title="bbox 912 2706 989 2760" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">„τὸ</ins>
           </span>
         </span>
         <span id="w_357" class="ocr_word" title="bbox 1021 2720 1104 2760" lang="grc">
@@ -1969,23 +1962,18 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_363" class="ocr_word" title="bbox 1806 2700 1911 2755">
+        <span id="w_363_0" class="ocr_word" title="bbox 1806 2700 1911 2755">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; τὸ &amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τὸ&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_364" class="ocr_word" title="bbox 1942 2706 2077 2754" lang="grc">
+        <span id="w_363_1" class="ocr_word" title="bbox 1806 2700 1911 2755">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἔμψυχον</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 336 2772 2076 2834">
-        <span id="w_365" class="ocr_word" title="bbox 336 2794 418 2834" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χον</ins>
-          </span>
-        </span>
         <span id="w_366" class="ocr_word" title="bbox 448 2794 528 2820" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
@@ -2137,12 +2125,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 338 3030 2076 3083">
-        <span id="w_394" class="ocr_word" title="bbox 338 3037 445 3083">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quiro</ins>
-            <del title="nlp 0.90">requiro</del>
-          </span>
-        </span>
         <span id="w_395" class="ocr_word" title="bbox 470 3043 544 3073" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
@@ -2175,14 +2157,14 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_401" class="ocr_word" title="bbox 1058 3039 1125 3070">
+        <span id="w_401_0" class="ocr_word" title="bbox 1058 3039 1125 3070">
           <span class="alternatives">
-            <ins title="nlp 2.00">633—644.</ins>
+            <ins class="alt" title="nlp 2.00">633—644.</ins>
           </span>
         </span>
-        <span id="w_403" class="ocr_word" title="bbox 1177 3038 1256 3070">
+        <span id="w_401_1" class="ocr_word" title="bbox 1058 3039 1125 3070">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">644.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_404" class="ocr_word" title="bbox 1354 3038 1398 3069">
@@ -2212,25 +2194,13 @@
             <ins class="alt" title="nlp 1.00">37</ins>
           </span>
         </span>
-        <span id="w_409" class="ocr_word" title="bbox 1858 3030 1937 3065">
+        <span id="w_409_0" class="ocr_word" title="bbox 1858 3030 1937 3065">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Hoc</ins>
-            <del title="nlp 0.90">Hoc</del>
-          </span>
-        </span>
-        <span id="w_410" class="ocr_word" title="bbox 1962 3030 2076 3065">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Zenosit</ins>
+            <ins class="alt" title="nlp 2.00">Hoc</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 339 3084 2077 3137">
-        <span id="w_411" class="ocr_word" title="bbox 339 3091 396 3126">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nis</ins>
-            <del title="nlp 0.90">Zenonis</del>
-          </span>
-        </span>
         <span id="w_412" class="ocr_word" title="bbox 434 3094 695 3137">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">argumentum</ins>
@@ -2281,10 +2251,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 340 3142 1591 3185">
-        <span id="w_421" class="ocr_word" title="bbox 414 3156 436 3180">
+        <span id="w_421_0" class="ocr_word" title="bbox 414 3156 436 3180">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">a</ins>
-            <del title="nlp 0.90">a</del>
+            <ins class="alt" title="nlp 2.00">sit</ins>
+          </span>
+        </span>
+        <span id="w_421_1" class="ocr_word" title="bbox 414 3156 436 3180">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">a</ins>
           </span>
         </span>
         <span id="w_422" class="ocr_word" title="bbox 460 3145 730 3181">
@@ -2322,9 +2296,9 @@
             <ins title="nlp 2.00">§</ins>
           </span>
         </span>
-        <span id="w_428" class="ocr_word" title="bbox 1395 3144 1591 3176">
+        <span id="w_428_0" class="ocr_word" title="bbox 1395 3144 1591 3176">
           <span class="alternatives">
-            <ins title="nlp 2.00">108—110.</ins>
+            <ins class="alt" title="nlp 2.00">108—110.</ins>
           </span>
         </span>
       </span>
